[gd_scene load_steps=4 format=3]

[ext_resource type="Script" path="res://scripts/ResearchPanel.gd" id="1"]
[ext_resource type="Script" path="res://scripts/TechTreeView.gd" id="2"]
[ext_resource type="Shader" path="res://shaders/tech_tree_backdrop.gdshader" id="3"]

[sub_resource type="ShaderMaterial" id="1"]
shader = ExtResource("3")
shader_parameter/blur_strength = 1.4
shader_parameter/vignette_strength = 0.45
shader_parameter/vignette_power = 2.2
shader_parameter/tint = Color(0.06, 0.12, 0.18, 0.55)

[node name="ResearchPanel" type="PanelContainer"]
visible = false
anchors_preset = 15
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 40.0
offset_top = 40.0
offset_right = -40.0
offset_bottom = -40.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="Backdrop" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 0.0
offset_top = 0.0
offset_right = 0.0
offset_bottom = 0.0
mouse_filter = 2
color = Color(0, 0, 0, 0)
material = SubResource("1")
z_index = -1

[node name="VBox" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="TitleBar" type="HBoxContainer" parent="VBox"]
layout_mode = 2

[node name="Title" type="Label" parent="VBox/TitleBar"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 18
text = "Research"

[node name="CloseButton" type="Button" parent="VBox/TitleBar"]
custom_minimum_size = Vector2(30, 30)
layout_mode = 2
text = "X"

[node name="Separator" type="HSeparator" parent="VBox"]
layout_mode = 2

[node name="CurrentResearch" type="Label" parent="VBox"]
layout_mode = 2
theme_override_colors/font_color = Color(0.4, 0.7, 1, 1)
text = "Researching: None"

[node name="Separator2" type="HSeparator" parent="VBox"]
layout_mode = 2

[node name="FilterBar" type="HBoxContainer" parent="VBox"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="FilterLabel" type="Label" parent="VBox/FilterBar"]
layout_mode = 2
text = "Filter"
theme_override_colors/font_color = Color(0.6, 0.7, 0.78, 1)

[node name="EraFilter" type="OptionButton" parent="VBox/FilterBar"]
custom_minimum_size = Vector2(130, 0)
layout_mode = 2

[node name="TierFilter" type="OptionButton" parent="VBox/FilterBar"]
custom_minimum_size = Vector2(110, 0)
layout_mode = 2

[node name="AvailableOnly" type="CheckBox" parent="VBox/FilterBar"]
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
text = "Available"

[node name="SearchFilter" type="LineEdit" parent="VBox/FilterBar"]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Search tech..."

[node name="ClearFilters" type="Button" parent="VBox/FilterBar"]
custom_minimum_size = Vector2(70, 0)
layout_mode = 2
text = "Clear"

[node name="TechTreeView" type="Control" parent="VBox"]
custom_minimum_size = Vector2(0, 300)
layout_mode = 2
size_flags_vertical = 3
script = ExtResource("2")

[node name="Separator3" type="HSeparator" parent="VBox"]
layout_mode = 2

[node name="TechInfo" type="RichTextLabel" parent="VBox"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
bbcode_enabled = true
text = ""
fit_content = false
